fixing timestamp layout issue

--- a/common/app/assets/stylesheets/base/base.less
+++ b/common/app/assets/stylesheets/base/base.less
@@ -67,6 +67,7 @@ span.timestamp {
     line-height: 15px;
     color: #666;
     font-family: helvetica, arial, sans-serif;
+    width: 85px; /* todo: make this a global less variable */
 }
 
 ol, ul {
